--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <div>
+        <div class="sideBar">
+          <div class="sideBarOptions">
+            <a href="#">About</a>
+            <a href="#">Skills</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
