--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -14,12 +18,19 @@
     </header>
     <main>
       <div>
-        <div class="sideBar">
-          <div class="sideBarOptions">
-            <a href="#">About</a>
-            <a href="#">Skills</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+        <div class="side-bar">
+          <div class="side-bar-name">
+            <h2>Pavels Aleksejevs</h2>
+          </div>
+          <div class="side-bar-options-sub">
+            <div class="side-bar-options">
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">My Skills</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
