--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="side-bar">
           <div class="side-bar-name">
             <h2>Pavels Aleksejevs</h2>
+            <h3>Web Developer</h3>
           </div>
           <div class="side-bar-options-sub">
             <div class="side-bar-options">
@@ -30,6 +31,33 @@
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
+            </div>
+          </div>
+          <div class="links">
+            <div class="links-sub github">
+              <a href="https://github.com/pavel-alexeev" target="_blank"
+                ><img src="./images/svg/Octicons-mark-github.svg" alt="GitHub"
+              /></a>
+            </div>
+            <div class="links-sub instagram">
+              <a href="https://www.instagram.com/pav.el.alex/" target="_blank"
+                ><img
+                  src="./images/svg/iconmonstr-instagram-11.svg"
+                  alt="Instagram"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="main">
+          <div class="site-header-content">
+            <div>
+              <img
+                src="./images/Screenshot 2023-02-05 211858.png"
+                alt="Pavels Aleksejevs"
+              />
+            </div>
+            <div>
+              <h2>Hi, I'm Pavels</h2>
             </div>
           </div>
         </div>
