--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
+    <script src="./script.js" defer></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
@@ -56,8 +57,17 @@
                 alt="Pavels Aleksejevs"
               />
             </div>
-            <div>
+            <div class="site-header-text-section">
               <h2>Hi, I'm Pavels</h2>
+              <p>
+                I'm web developer and I'm working with JacaScript, HTML/CSS to
+                deliver exceptional customer experience. Adept at contributing
+                to a highly collaborative work environment, finding solutions,
+                and determining customer satisfaction.
+              </p>
+              <label for="shortest">Shortest</label>
+              <input type="button" id="shortest" onclick="change_text()" />
+              <p id="demo"></p>
             </div>
           </div>
         </div>
