--- a/index.html
+++ b/index.html
@@ -61,67 +61,67 @@
               <h2>Hi, I'm Pavels</h2>
               <div class="description-options">
                 <h3>Adjust Bio Length</h3>
-                <div class="radio-buttons">
-                  <div class="radio-btn-each">
-                    <input
-                      type="radio"
-                      id="shortest"
-                      name="description"
-                      onclick="changeText()"
-                      checked
-                    />
-                    <label for="shortest"></label>
+                <div class="btn-section">
+                  <div class="radio-buttons">
+                    <div class="radio-btn-each">
+                      <input
+                        type="radio"
+                        id="shortest"
+                        name="description"
+                        onclick="changeText('shortest')"
+                      />
+                      <label for="shortest"></label>
+                    </div>
+                    <div class="radio-btn-each">
+                      <input
+                        type="radio"
+                        id="short-norm"
+                        name="description"
+                        onclick="changeText('short-norm')"
+                      />
+                      <label for="short-norm"></label>
+                    </div>
+                    <div class="radio-btn-each">
+                      <input
+                        type="radio"
+                        id="normal"
+                        name="description"
+                        onclick="changeText('normal')"
+                        checked
+                      />
+                      <label for="normal"></label>
+                    </div>
+                    <div class="radio-btn-each">
+                      <input
+                        type="radio"
+                        id="norm-long"
+                        name="description"
+                        onclick="changeText('norm-long')"
+                      />
+                      <label for="norm-long"></label>
+                    </div>
+                    <div class="radio-btn-each">
+                      <input
+                        type="radio"
+                        id="longest"
+                        name="description"
+                        onclick="changeText('longest')"
+                      />
+                      <label for="longest"></label>
+                    </div>
                   </div>
-                  <div class="radio-btn-each">
-                    <input
-                      type="radio"
-                      id="normal"
-                      name="description"
-                      onclick="changeText2()"
-                    />
-                    <label for="normal"></label>
+                  <div class="bio-length-words">
+                    <p>Shortest</p>
+                    <p>Longest</p>
                   </div>
-                  <div class="radio-btn-each">
-                    <input
-                      type="radio"
-                      id="normal"
-                      name="description"
-                      onclick="changeText2()"
-                    />
-                    <label for="normal"></label>
-                  </div>
-                  <div class="radio-btn-each">
-                    <input
-                      type="radio"
-                      id="normal"
-                      name="description"
-                      onclick="changeText2()"
-                    />
-                    <label for="normal"></label>
-                  </div>
-                  <div class="radio-btn-each">
-                    <input
-                      type="radio"
-                      id="longest"
-                      name="description"
-                      onclick="changeText3()"
-                    />
-                    <label for="longest"></label>
-                  </div>
-                </div>
-                <div class="bio-length-words">
-                  <p>Shortest</p>
-                  <p>Longest</p>
                 </div>
                 <div class="about-me">
-                  <p id="short">
+                  <p id="text">
                     I'm web developer and I'm working with JacaScript, HTML/CSS
                     to deliver exceptional customer experience. Adept at
                     contributing to a highly collaborative work environment,
                     finding solutions, and determining customer satisfaction.
                   </p>
-                  <p id="norm"></p>
-                  <p id="long"></p>
                 </div>
               </div>
             </div>
