--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
     />
   </head>
   <body>
-    <header>
-      <nav></nav>
-    </header>
     <main>
       <div>
         <div class="side-bar">
           <div class="side-bar-name">
+            <div class="side-bar-img">
+              <img
+                src="./images/Screenshot 2023-02-05 211858.png"
+                alt="Pavels Aleksejevs"
+              />
+            </div>
             <h2>Pavels Aleksejevs</h2>
             <h3>Web Developer</h3>
           </div>
           <div class="side-bar-options-sub">
             <div class="side-bar-options">
               <ul>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">My Skills</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -47,17 +51,26 @@
                   alt="Instagram"
               /></a>
             </div>
+            <div class="links-sub linkedin">
+              <a href="#" target="_blank"
+                ><img src="./images/svg/linkedin-112.svg"
+              /></a>
+            </div>
           </div>
         </div>
         <div class="main">
-          <div class="site-header-content">
-            <div>
-              <img
-                src="./images/Screenshot 2023-02-05 211858.png"
-                alt="Pavels Aleksejevs"
-              />
+          <div class="main-top">
+            <div class="main-home">
+              <div class="dark-background"></div>
             </div>
-            <div class="site-header-text-section">
+            <div>
+              <h1>asdhasdj</h1>
+              <button onclick="typeWriter()">Click me</button>
+              <p id="demo"></p>
+            </div>
+          </div>
+          <div class="site-about-content">
+            <div class="site-about-text-section">
               <h2>Hi, I'm Pavels</h2>
               <div class="description-options">
                 <h3>Adjust Bio Length</h3>
