--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
         <div class="main">
           <div class="main-top">
             <div class="main-home">
-              <div class="dark-background"></div>
-            </div>
-            <div>
-              <h1>asdhasdj</h1>
-              <button onclick="typeWriter()">Click me</button>
-              <p id="demo"></p>
+              <div class="dark-background">
+                <div class="welcome">
+                  <p>Welcome</p>
+                  <div class="typing-effect">
+                    <span id="elementEl">I'm a Web Developer</span>
+                  </div>
+                  <p>Based in Derby, UNITED KINGDOM</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="site-about-content">
